[workspace]
members = [
	"node/parachain",
	"node/standalone",
	"pallets/domain",
	"pallets/fixed-swap",
	"primitives",
	"runtime/parachain",
	"runtime/standalone",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
panic = "unwind"
incremental = true

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }

# ORML dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }

# Cumulus dependencies
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-pallet-xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-spambot = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
