[workspace]
members = [
	"node",
	"pallets/auction",
	"pallets/domain-registrar",
	"pallets/fixed-swap",
	"pallets/nft",
	"pallets/order",
	"primitives",
	"runtime",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
panic = "unwind"

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-executor-wasmtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

# ORML dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }
orml-nft = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8d076372849a4dced5468f0f14db96b7145160ee" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-ping = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
