[package]
name = "polka-domain-collator"
version = "0.1.0"
authors = ["Alkaid <alkaidwe@gmail.com>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2021"

[[bin]]
name = "polka-domain-collator"
path = "src/main.rs"

[dependencies]
derive_more = "0.99.17"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.13"
parking_lot = "0.10.2"
trie-root = "0.16.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.26"
serde = { version = "1.0.135", features = ["derive"] }
hex-literal = "0.2.1"
serde_json = { version = "1.0.66" }

# Parachain dependencies
parachain-runtime = { package = "polka-domain-runtime", path = "../runtime" }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }

polka-domain-primitives = { path = "../primitives" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
