[package]
name = "polka-domain-primitives"
version = "0.1.0"
authors = ["Alkaid <alkaidwe@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["max-encoded-len"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
evm = { version = "0.26.0", default-features = false, features = ["with-codec"] }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
serde_json = { version = "1.0.66" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"evm/std",
	"evm/with-serde",
]
