[package]
name = "polka-domain-primitives"
version = "0.1.0"
authors = ["Alkaid <alkaidwe@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
bstringify = "0.1.2"
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.135", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["max-encoded-len"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
evm = { version = "0.33.1", default-features = false, features = ["with-codec"] }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
serde_json = { version = "1.0.78" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"evm/std",
	"evm/with-serde",
]
